# synapse-protocol

./: .coderabbit.yaml  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  main.md  skins.md  synapse.json
.agent/rules/: rule-0.md
.agent/workflows/: reolplazr.md
.gemini/: config.yaml
.github/: COMMERCIAL.md  ENTERPRISE_ROADMAP.md  REPOSITORY_STRATEGY.md  copilot-instructions.md
.github/agents/: architect.agent.md  code-review.agent.md  protocol-claude.agent.md  protocol-codex.agent.md  protocol-gemini.agent.md  protocol-grok.agent.md  quick.agent.md  recipe-loader.agent.md  router.agent.md  workflow-manager.agent.md  workspace-hub.agent.md
.github/instructions/: auto-context.instructions.md  grok-tools.instructions.md
.github/issues/: .issue-mapping.json  DOCS_dependency-workflow-system.md  FEAT_atomicity-checker-rust.md  FEAT_cli-application.md  FEAT_define-core-entities.md  FEAT_define-core-ports.md  FEAT_dojo-component.md  FEAT_guardian-agent-workflow.md  FEAT_lancedb-adapter.md  FEAT_planner-agent-workflow.md  FEAT_prompt-export-continuation.md  FEAT_protocol-v3-full-autonomy.md  FEAT_router-agent-enhancement.md  FEAT_setup-cargo-workspace.md  FEAT_sled-adapter.md  FEAT_status-hud-component.md  FEAT_synapse-agent-roles.md  FEAT_tauri-svelte-setup.md  FEAT_terminal-component.md  FEAT_wallet-tokenomics.md
.github/prompts/: help.prompt.md  status.prompt.md  update.prompt.md
.github/workflows/: agent-dispatcher.yml  aggregate-telemetry.yml  build-tools.yml  check-protocol-update.yml  codex-review.yml  commit-atomicity.yml  copilot-auto-implementation.yml  copilot-meta-analysis.yml  dependency-quarantine.yml  dependency-sentinel.yml  e2e-testing.yml  evolution-cycle.yml  guardian-agent.yml  living-context.yml  planner-agent.yml  post-quarantine-analysis.yml  setup-labels.yml  structure-validator.yml  sync-issues.yml  update-protocol.yml  workflow-validator.yml
.✨/: AGENT_INDEX.md  ARCHITECTURE.md  CONTEXT_LOG.md  TOKENOMICS.md  features.json
apps/desktop/: .gitignore  .gitkeep  package-lock.json  package.json  tailwind.config.js  vite.config.js.timestamp-1764711451302-febe3d1425412.mjs
apps/desktop/components/: Dojo.md  StatusHUD.md  Terminal.md
apps/desktop/src/: App.svelte  app.html
apps/desktop/src/lib/components/: Dojo.svelte  StatusHUD.svelte  Terminal.svelte
apps/desktop/src/routes/: +layout.svelte  +page.svelte
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: commands.rs  config.rs  main.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: error.rs  lib.rs
crates/synapse-core/src/entities/: genesis_block.rs  interaction.rs  memory_node.rs  mod.rs  node_type.rs  proof_of_sentience.rs  wallet.rs
crates/synapse-core/src/logic/: consolidation.rs  metabolism.rs  mod.rs
crates/synapse-core/src/ports/: audio_port.rs  buffer_port.rs  commerce_port.rs  context_port.rs  embedding_port.rs  immune_port.rs  llm_port.rs  memory_port.rs  mod.rs  vision_port.rs
crates/synapse-immune/: Cargo.toml
crates/synapse-immune/src/: lib.rs
crates/synapse-infra/: Cargo.toml
crates/synapse-infra/src/: error.rs  lib.rs
crates/synapse-infra/src/adapters/: audio_adapter.rs  candle_adapter.rs  context_adapter.rs  immune_adapter.rs  lancedb_adapter.rs  mock_embedding_adapter.rs  mock_llm_adapter.rs  mod.rs  ort_adapter.rs  sled_adapter.rs  surrealdb_adapter.rs  vision_adapter.rs
crates/synapse-infra/src/commerce/: mod.rs
docs/: CLI_TRUST.md  infographic.html
docs/agent-docs/: HUMAN_LAYER_PROTOCOL.md  PROMPT_PROTOCOL_INSTALLER.md  README.md  REPORT_PROJECT_AUDIT.md
scripts/: ai-report.ps1  bump-version.ps1  bump-version.sh  equip-agent.ps1  equip-agent.sh  export-session.ps1  generate-workspace-agent.ps1  git-atomize.ps1  git-atomize.sh  init_project.ps1  init_project.sh  install-cli.ps1  migrate-ide-rules.ps1  send-telemetry.ps1
test_synapse/lancedb/memories.lance/_transactions/: 0-83f1eb24-83a6-4abf-9fbb-a3ea3034c29e.txn  1-9b6ba9d0-5898-4ca7-8843-2335303d06b6.txn
test_synapse/lancedb/memories.lance/_versions/: 1.manifest  2.manifest
