[package]
name = "synapse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Synapse Protocol"

[dependencies]
# Core domain
synapse-core = { path = "../synapse-core" }
synapse-infra = { path = "../synapse-infra" }

# CLI
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Client (for downloading models)
reqwest = { version = "0.11", features = ["stream"] }
