[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain layer for Synapse Protocol - entities, ports, and logic"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
