[package]
name = "synapse-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure adapters for Synapse Protocol"

[dependencies]
# Core domain
synapse-core = { path = "../synapse-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
lancedb = { workspace = true }
sled = { workspace = true }

# Arrow (matching LanceDB's version)
arrow-array = "56"
arrow-schema = "56"

# AI Inference
ort = { workspace = true }
# candle-core = { workspace = true }  # TODO: Enable when RWKV implemented
# candle-nn = { workspace = true }
# candle-transformers = { workspace = true }

[dev-dependencies]
tempfile = "3"
