[package]
name = "synapse-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure adapters for Synapse Protocol"

[dependencies]
# Core domain
synapse-core = { path = "../synapse-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
lancedb = { workspace = true }
sled = { workspace = true }

# AI Inference
ort = { workspace = true }
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.16"
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Sensory (Vision & Audio)
nokhwa = { version = "0.10", features = ["input-native"] }
cpal = "0.15"
rodio = "0.17"




# System / Context (Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[dependencies.image]
version = "0.24"
